syntax = "proto3";
package youliao.pdu.base;

enum ServiceID
{
    //语法要求  枚举类型第一个必须为0
    SID_ZERO            = 0x0000;
    SID_LOGIN           = 0x0001;           //客户端登录
    SID_FRIEND_LIST     = 0x0002;           //好友列表
    SID_SERVER          = 0x0003;           //服务器之间的消息
    SID_OTHER           = 0x0004;           //其他
    SID_SESSION         = 0x0005;           //SESSION
    SID_MESSAGE         = 0x0006;           //消息
    SID_GROUP           = 0x0007;           //群组
}

enum LoginCID
{
    CID_LOGIN_ZERO = 0x0000;
    CID_LOGIN_REQUSET_MSGSERVER = 0x0101;       // 请求消息服务器
    CID_LOGIN_RESPONE_MSGSERVER = 0x0102;       // 登录服务器相应客户机关于消息服务器的请求
    CID_LOGIN_REQUEST_USERLOGIN = 0x0103;       // 用户登录请求
    CID_LOGIN_RESPONE_USERLOGIN = 0x0104;       // 用户登录结果响应
    CID_LOGIN_REQUEST_USERLOGINOUT = 0x0105;    //用户退出登录
}

//服务器之间的消息
enum ServerCID
{
    CID_SERVER_ZERO = 0x0000;
    CID_SERVER_MSGSERVER_INFO = 0x0201;          //消息服务器主动发送该消息给登录服务器
    CID_SERVER_VALIDATE_REQUEST = 0x0202;        //msg server向db server发送用户校验信息
    CID_SERVER_VALIDATE_RESPONE = 0x0203;
    CID_SERVER_USER_LOGOUT      = 0x0204;        //由消息服务器发送给数据库服务器
    CID_SERVER_ROUTE_MSG        = 0x0205;
    CID_SERVER_ROUTE_BROADCAST  = 0x0206;
    CID_SERVER_GET_ONLINE_FRIENDS_REQUEST = 0x0207;
    CID_SERVER_GET_ONLINE_FRIENDS_RESPONE = 0x0208;
    CID_SERVER_GET_SERVER_INDEX_REQUEST   = 0x0209;
    CID_SERVER_GET_SERVER_INDEX_RESPONE   = 0x020A;
    CID_SERVER_ROUTE_MESSAGE              = 0x020B;     //MsgServer请求RouteServer转发消息
    CID_SERVER_GET_FRIEND_ONLINE_STATUS   = 0x020C;     //RouteServer请求DBServer好友在线状态
    CID_SERVER_ROUTE_TO_MESSAGE           = 0x020D;     //RouteServer发送MsgServer

}

enum OtherCID
{
    CID_OTHER_ZERO      = 0x0000;
    CID_OTHER_HEARTBEAT = 0x0301;            //心跳包
}

//好友列表
enum FriendListCID
{
    CID_FRIENDLIST_ZERO = 0x0000;
    CID_FRIENDLIST_GET_REQUEST = 0X0401;      //获取好友列表请求
    CID_FRIENDLIST_GET_RESPONE = 0X0402;      //         响应
    CID_FRIENDLIST_FRIEND_STATUS_CHANGE = 0x0403;
    CID_FRIENDLIST_SIGNATURE_CHANGED_REQUEST = 0x0404;      //个性签名更改请求
    CID_FRIENDLIST_SIGNATURE_CHANGED_RESPONE = 0x0405;      //个性签名修改响应
    CID_FRIENDLIST_FRIEND_SIGNATURE_CHANGED  = 0x0406;      //好友个性签名修改通知
    CID_FRIENDLIST_MODEFY_FRIEND_GROUP_NAME  = 0x0407;      //修改好友分组名
    CID_FRIENDLIST_ADD_FRIEND_GROUP_REQUEST  = 0x0408;      //新增好友分组
    CID_FRIENDLIST_ADD_FRIEND_GROUP_RESPONE  = 0x0409;
    CID_FRIENDLIST_GET_GROUPS_REQUEST        = 0x040A;      //获取好友分组请求
    CID_FRIENDLIST_GET_GROUPS_REPSONE        = 0x040B;      //          响应
    CID_FRIENDLIST_RENAME_FRIEND_GROUP_REQUEST = 0x040C;    //好友分组重命名
    CID_FRIENDLIST_DELETE_FRIEND_GROUP_REQUEST = 0x040D;    //删除好友列表中某个分组
    CID_FRIENDLIST_MOVE_FRIEND_TO_GROUP_REQUEST = 0x040E;   //移动好友到摸一个分组
    CID_FRIENDLIST_DELETE_FRIEND_REQUEST        = 0x040F;   //删除好友
    CID_FRIENDLIST_MODIFY_FRIEND_REMARK_RQUEST  = 0x0410;   //修改好友备注
    CID_FRIENDLIST_SEARCH_FRIEND_REQUEST        = 0x0411;   //搜索好友请求
    CID_FRIENDLIST_SEARCH_FRIEND_RESPONE        = 0x0412;   //搜索好友响应
    CID_FRIENDLIST_ADD_FRIEND_REQUEST           = 0x0413;   //请求添加好友
    CID_FRIENDLIST_ADD_FRIEND_RESPONE           = 0x0414;   //响应
    CID_FRIENDLIST_GET_REQUEST_HISTORY_REQUEST  = 0x0415;   //请求获取好友请求历史
    CID_FRIENDLIST_GET_REQUEST_HISTORY_RESPONE  = 0x0416;   //响应获取好友请求历史
}

//最近会话
//该CID基本只会用于服务器内部
//客户端在登陆后会请求一次Session列表。
//之后所有的数据在本地维护
//Session相关的数据根据DBServer在保存消息时维护
enum SessionListCID
{
    CID_SESSIONLIST_ZERO = 0x0000;
    CID_SESSIONLIST_ADD_SESSION = 0x0501;  //新增session
    CID_SESSIONLIST_DEL_SESSION = 0x0502;  //删除session
    CID_SESSIONLIST_UPD_SESSION = 0x0503;  //更新session  暂时无用。因为每次发送message时会自动更新
    CID_SESSIONLIST_TOP_SESSION = 0x0504;  //置顶session
    CID_SESSIONLIST_GET_SESSIONS_REQUEST = 0x0505;  //请求Session列表
    CID_SESSIONLIST_GET_SESSIONS_RESPONE = 0x0506;  //响应Session列表
}


//消息
enum MessageCID
{
    CID_MESSAGE_ZERO = 0x0000;
    CID_MESSAGE_DATA = 0x0601;        //发送消息
    CID_MESSAGE_SAVE = 0x0602;        //保存消息到数据库
    CID_MESSAGE_UPDATE = 0x0603;      //更新消息，第一次存入数据库的消息时未读状态。当收到Client ACK，更改其状态为已读
    CID_MESSAGE_GET_LATEST_MSG_ID_REQUEST = 0x0604; //请求最新的消息ID
    CID_MESSAGE_GET_LATEST_MSG_ID_RESPONE = 0x0605; //响应最新的消息ID
}

//群组
enum GroupCID
{
    CID_GROUP_ZERO = 0x0000;
    CID_GROUP_CREATE_REQUEST        = 0x0701; // 创建群组请求
    CID_GROUP_CREATE_RESPONE        = 0x0702; // 创建群组请求
    CID_GROUP_GET_LIST_REQUEST      = 0x0703; // 请求获取群组
    CID_GROUP_GET_LIST_RESPONE      = 0x0704; // 响应
    CID_GROUP_ADD_GROUP_REQUEST     = 0x0705; //请求加群
    CID_GROUP_ADD_GROUP_RESPONE     = 0x0706; //响应
    CID_GROUP_GET_MEMBER_REQUEST    = 0x0707; //请求群成员
    CID_GROUP_GET_MEMBER_RESPONE    = 0x0708;
    CID_GROUP_MODIFY_CARD_RESQUEST  = 0x0709; //请求修改群名片，修改结果不通知客户端
    CID_GROUP_SEARCH_GROUP_REQUEST  = 0x070A;
    CID_GROUP_SEARCH_GROUP_RESPONE  = 0x070B;
    CID_GROUP_VERIFY_NOTIFY         = 0x070C; //通知
}

//响应结果类型
enum ResultType
{
    NONE    =   0;                      //操作成功
    NO_MSG_SERVER = 1;
    MSG_SERVER_FULL = 2;
    SIGNATURE_MODIFY_FAILED = 3;        //个性签名修改失败
}

//用户在线状态
enum UserStatusType
{
    USER_STATUS_ZERO = 0;
    USER_STATUS_ONLINE = 1;
    USER_STATUS_OFFLINE = 2;
    USER_STATUS_HIDE = 3;
}

//session类型
enum SessionType
{
    SESSION_TYPE_ZERO   = 0;
    SESSION_TYPE_SINGLE = 1;    //好友会话
    SESSION_TYPE_GROUP  = 2;    //群组会话
    SESSION_TYPE_VALIDATE_MSG = 3; //验证消息
}

enum SessionFlag
{
    SESSION_FLAG_ZERO = 0;
    SESSION_FLAG_NORMAL = 1;        //正常状态
    SESSION_FLAG_ONTOP = 2;         //置顶
}

//用户信息, 登录成功后发送
message UserInfo
{
    uint32 user_id = 1;
    uint32 user_account = 2;
    uint32 user_sex = 3;
    string user_nick = 4;
    string user_header_url =5;
    string user_email = 6;
    string user_phone = 7;
    string user_sign_info = 8;
}

//好友信息
message FriendInfo
{
    uint32 related_id = 1;
    uint32 friend_id = 2;
    uint32 friend_account = 3;
    uint32 friend_sex = 4;
    string friend_nick = 5;
    string friend_header_url =6;
    string friend_email = 7;
    string friend_phone = 8;
    string friend_sign_info = 9;
    string friend_remark = 10;
    bool   friend_is_online = 11;
}

//会话信息
message SessionInfo
{
    uint32 session_id = 1;
    uint32 other_id = 2;
    uint32 session_type = 3;
    uint32 session_top = 4;
    uint32 session_update = 5;
    uint32 latest_msg_id = 6;
    bytes last_message_data = 7;
}

//群成员信息
message MemberInfo
{
    uint32 user_id = 1;
    string group_card = 2;
    uint32 last_chat_time = 3;
    UserInfo user_info = 4;
}


//添加好友请求历史信息
message AddRequestInfo
{
    uint32 id = 1;
    uint32 other_id = 2;
    uint32 result_id = 3;
    uint32 handle_time = 4;
    string validate_data = 5;
    string other_head_url = 6;
    string other_nick = 7;
}

//群组信息
message GroupInfo
{
    uint32 group_id = 1;        //群ID
    string group_name = 2;      //群名称
    string group_head = 3;      //群头像
    uint32 group_creator = 4;   //群主
    uint32 group_capacity = 5;  //最大成员数
    uint32 group_created = 6;   //成立时间
    repeated uint32 managers = 7; //管理员
    repeated uint32 members = 8;
    uint32 group_verify_type = 9;
}

//心跳包
message HeartBeat
{
    //
}

enum MessageType
{
    MESSAGE_ZERO = 0x00;
    MESSAGE_TYPE_SINGLE_TEXT   = 0x01; //单人 文本
    MESSAGE_TYPE_SINGLE_AUDIO  = 0x02; //单人 语音
    MESSAGE_TYPE_GROUP_TEXT    = 0x03; //群组 文本
    MESSAGE_TYPE_GROUP_AUDIO   = 0x04; //群组 语音
    MESSAGE_TYPE_VALIDATE_MSG  = 0x05; //验证消息
}


//服务器间通知
enum RouteMessageType
{
    ROUTE_MESSAGE_ZERO = 0x00;
    ROUTE_MESSAGE_FRIEND_STATUS_CHANGE = 0x01;     //好友状态更改
    ROUTE_MESSAGE_FRIEND_SIGNATURE_CHANGE = 0x02;  //好友个性签名修改
}

//搜索类型
enum SearchType
{
    SEARCH_TYPE_ZERO = 0x00;
    SEARCH_TYPE_ACCOUNT = 0x01;  //按照账号搜索
    SEARCH_TYPE_NICKNAME = 0x02; //按照昵称搜索
}

//群组类型
enum GroupType{
    GROUP_TYPE_ZERO         = 0x00;
    GROUP_TYPE_NORMAL		= 0x01;
    GROUP_TYPE_TMP			= 0x02;
}

//群组验证类型
enum GroupVerifyType {
    GROUP_VERIFY_ZERO   = 0x00;
    GROUP_VERIFY_NEED   = 0x01; //需要验证
    GROUP_VERIFY_ALL    = 0x02; //允许任何人
    GROUP_VERIFY_NONE   = 0x03; //不允许任何人
}
