syntax = "proto3";
package youliao.pdu.server;
import "youliao.base.proto";

//[1]db_server

//校验用户名和密码
message ValidateRequest
{
    string user_name = 1;
    string user_pwd  = 2;
    uint32 msg_serv_id = 3;
    bytes  attach_data  = 20;
}

message ValidateRespone
{
    string user_name     = 1;
    uint32 result_code   = 2;
    string result_string = 3;
    youliao.pdu.base.UserInfo user_info = 4;
    bytes attach_data = 20;
}



//用户下线
//由MsgServer发送给DBServer
//刷新CacheDB的数据
message UserOffline
{
    uint32 user_id = 1;
}

//
message MsgServerInfo
{
    string ip             = 1;
    uint32 port           = 2;
    uint32 max_conn_count = 3;
    uint32 cur_conn_count = 4;
}


//1. 用户上线,msg_server向dbserver请求在线用户,
//2. dbserver将在线好友信息发送到msg_server
//3. msgserver 将收到的好友信息发送到routeserver.
//4. routerserver 根据好友所在msgserver进行广播.


//[1]
message OnlineFirendRequest
{
    uint32 user_id = 1;
}

//[2]
message OnlineFriendRespone
{
    //在线好友ID : 消息服务器ID
    map<uint32, uint32> online_firends = 1;
}

//[3]
message MsgRouteRequest
{
    uint32 user_id = 1; //用户id, 由该用户发出的请求
    map<uint32, uint32> online_firends = 2;    //在线好友ID : 消息服务器ID
    bytes route_data = 20;
}

//[4]
message MsgRouteResponse
{
    uint32 user_id = 1;
    repeated uint32 friends = 2;
    bytes route_data = 20;
}